test/trivial/deitz/test_plusassign_error.chpl
var x: int(64) = 1;
var u: int(32) = 2;
u += x;
writeln(u);
